profiling-using-exp-runner/backup_FINAL_RESULTS/dft_experiment/run_1_repetition_0/energibridge.log
sampling interval: 200, target function: DFT_cache, input size: 1024
  File "<string>", line 1
    import sys; import os; import numpy as np; sys.path.append(/Users/rr/GreenLab/ProjectCode/profiling-using-exp-runner/packages); import cpu.dft as module; X = tuple(np.random.random(1024)); module.DFT_cache(X)
                                                               ^
SyntaxError: invalid syntax
Energy consumption in joules: 7.766430130004882 for 0.23136169 sec of execution.
